@@ -1,6 +1,5 @@
 // SPDX-License-Identifier: Apache-2.0
 
-import org.graalvm.buildtools.gradle.dsl.GraalVMExtension
 import org.springframework.boot.gradle.tasks.run.BootRun
 
 plugins {
@@ -26,21 +25,23 @@ val imagePlatform: String by project
 val platform = imagePlatform.ifBlank { null }
 
 tasks.bootBuildImage {
-    cleanCache.set(true)
-    //    cleanCache = true TODO try this instead
+    cleanCache = true
 
     val env = System.getenv()
     //    val repo = env.getOrDefault("GITHUB_REPOSITORY", "hiero-ledger/hiero-mirror-node")
     val image = "docker.io/jesseswirldslabs/${project.name}"
 
-    builder.set("docker.io/jesseswirldslabs/web3-builder-libsodium:20260317-2")
+    if (project.name == "web3") {
+        builder.set("docker.io/jesseswirldslabs/web3-builder-libsodium:20260317-3")
+    } else {
+        buildpacks =
+            listOf(
+                "urn:cnb:builder:paketo-buildpacks/java",
+                "paketobuildpacks/health-checker",
+                "paketo-buildpacks/native-image",
+            )
+    }
 
-    //    buildpacks =
-    //        listOf(
-    //            "urn:cnb:builder:paketo-buildpacks/java",
-    //            "paketobuildpacks/health-checker",
-    //            "paketo-buildpacks/native-image",
-    //        )
     docker {
         imageName = image
         imagePlatform = platform
@@ -48,32 +49,17 @@ tasks.bootBuildImage {
             password = env.getOrDefault("GITHUB_TOKEN", "")
             username = env.getOrDefault("GITHUB_ACTOR", "")
         }
-        tags = listOf("${image}:${project.version}77")
+        tags = listOf("${image}:${project.version}88")
     }
 
     val existingBuildArgs = env.getOrDefault("BP_NATIVE_IMAGE_BUILD_ARGUMENTS", "")
-    //    val extraBuildArgs =
-    //
-    // listOf("-H:ServiceLoaderFeatureExcludeServices=org.hibernate.bytecode.spi.BytecodeProvider")
-
     val extraBuildArgs =
-        listOf(
-            "-H:ServiceLoaderFeatureExcludeServices=org.hibernate.bytecode.spi.BytecodeProvider",
-            "-H:+ReportExceptionStackTraces",
-            //            "--exact-reachability-metadata", // good for debugging and catching
-            // missing metadata early instead of at runtime
-            "--enable-native-access=ALL-UNNAMED", // This one needs to stay
-            "--trace-class-initialization=com.goterl.lazysodium.SodiumJava,com.goterl.lazysodium.Sodium,org.hiero.base.crypto.engine.Ed25519VerificationProvider,com.sun.jna.NativeLibrary,com.sun.jna.Native",
-        )
+        listOf("-H:ServiceLoaderFeatureExcludeServices=org.hibernate.bytecode.spi.BytecodeProvider")
     val nativeImageBuildArgs =
         (listOf(existingBuildArgs) + extraBuildArgs).filter { it.isNotBlank() }.joinToString(" ")
 
-    // TODO libsodium move to web3
-    //    BP_JVM_VERSION investigate setting this to java 25
-    // TODO use java version from project
     environment =
         mapOf(
-            //            "BP_APT_PACKAGES" to "libsodium23",
             "BP_HEALTH_CHECKER_ENABLED" to "true",
             "BP_JVM_VERSION" to "25",
             "BP_LOG_LEVEL" to "DEBUG",
@@ -110,39 +96,3 @@ tasks.register<BootRun>("bootRunWithNativeAgent") {
     environment.putAll(bootRun.environment)
     workingDir = bootRun.workingDir
 }
-
-plugins.withId("org.graalvm.buildtools.native") {
-    extensions.configure<GraalVMExtension>("graalvmNative") {
-        binaries {
-            named("main") {
-                buildArgs.add(
-                    "-H:ServiceLoaderFeatureExcludeServices=org.hibernate.bytecode.spi.BytecodeProvider"
-                )
-            }
-        }
-    }
-}
-
-// TODO if above doesn't work, add this to where plugin being applied'
-// graalvmNative {
-//    binaries {
-//        named("main") {
-//
-// buildArgs.add("-H:ServiceLoaderFeatureExcludeServices=org.hibernate.bytecode.spi.BytecodeProvider")
-//        }
-//    }
-// }
-
-// todo when building boot image for grpc with
-//        rm -rf grpc/build
-//
-//
-//
-//                                                                1 < 19:04:19
-//    ./gradlew :grpc:clean :grpc:bootBuildImage --no-build-cache --info
-//        I get failures and seems i need to
-//    ./gradlew clean :protobuf:compileJava :grpc:compileJava --no-build-cache --rerun-tasks
-// --stacktrace
-
-// TODO to build do
-//    ./gradlew :grpc:bootBuildImage --rerun-tasks --no-build-cache
